// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NgJestConfig readTsConfig should return config including Angular compiler config with tsconfig as a string from ts-jest option 1`] = `
Object {
  "enableIvy": false,
  "fullTemplateTypeCheck": true,
  "module": 1,
  "strictInjectionParameters": true,
  "target": 1,
}
`;

exports[`NgJestConfig readTsConfig should return config including Angular compiler config with tsconfig as an object from ts-jest option 1`] = `
Object {
  "enableIvy": true,
  "experimentalDecorators": true,
  "fullTemplateTypeCheck": true,
  "module": 1,
  "resolveJsonModule": true,
  "strictInjectionParameters": true,
  "target": 1,
}
`;

exports[`NgJestConfig readTsConfig should return config including Angular compiler config without tsconfig defined in ts-jest option 1`] = `
Object {
  "enableIvy": true,
  "esModuleInterop": true,
  "forceConsistentCasingInFileNames": true,
  "importHelpers": true,
  "importsNotUsedAsValues": 2,
  "lib": Array [
    "lib.esnext.d.ts",
    "lib.dom.d.ts",
  ],
  "module": 1,
  "noFallthroughCasesInSwitch": true,
  "noImplicitReturns": true,
  "noUnusedLocals": true,
  "noUnusedParameters": true,
  "skipLibCheck": true,
  "strict": true,
  "target": 1,
  "types": Array [
    "node",
    "jest",
  ],
}
`;
